Recap-351 Resolved viewport height and changed Font color in User Screen.

--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -245,7 +245,7 @@
                         </div>
                         <div class="row buscador-principal">
                             <div class="col-md-8 col-sm-6"></div>
-                            <div class="col-md-8 col-sm-6">
+                            <div class="col-md-8 col-sm-6 fontcolor-dark">
                                 <form class="form-horizontal" id="users-createrequest" method="post"
                                       th:object="${userRoleForm}">
                                     <div class="form-group">
@@ -376,7 +376,7 @@
                         </div>
                         <div class="row buscador-principal">
                             <div class="col-md-8 col-sm-6"></div>
-                            <div class="col-md-8 col-sm-6">
+                            <div class="col-md-8 col-sm-6 fontcolor-dark">
                                 <form class="form-horizontal" id="editusers-createrequest" method="post"
                                       th:object="${userRoleForm}">
                                     <div class="form-group">
@@ -505,7 +505,7 @@
                         </div>
                         <div class="row buscador-principal">
                             <div class="col-md-8 col-sm-6"></div>
-                            <div class="col-md-8 col-sm-6">
+                            <div class="col-md-8 col-sm-6 fontcolor-dark">
                                 <form class="form-horizontal" id="deleteUsersForm" method="post"
                                       th:object="${userRoleForm}">
                                     <div class="form-group">
