RECAP-411 : Integrated Multi CAS and OAuth

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,7 +44,7 @@
                 <div class="col-sm-6 col-md-7 col-lg-6">
                     <!-- Login Section-->
                     <div class="login-wrapper">
-                        <form class="form-horizontal"  method="get" th:action="@{/login}" action="#" id="home_login"
+                        <form class="form-horizontal"  method="get" th:action="@{/login-scsb}" action="#" id="home_login"
                               th:object="${userForm}">
                             <h2 class="heading">Login</h2>
                             <div class="form-group">
