Recap-404,434,440,441 : Modified code for request and search UI issues.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -39,7 +39,7 @@
                                                 <button id="searchRequestsButton" class="btn themed-button themed-button-search" type="button" name="searchRequestsButton" onclick="searchRequests('searchRequests')">Search</button>
                                             </div>
                                             <div class="input-group-btn">
-                                                <button id="clearRequestForm" class="btn themed-button themed-button-cancel" type="submit" name="action" value="clear">Clear Search</button>
+                                                <button id="clearRequestForm" class="btn themed-button themed-button-cancel" type="button" name="action" onclick="clearRequests()">Clear Search</button>
                                             </div>
                                         </div>
                                     </form>
