When hitting the Enter key inside input textbox should display the result

--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -16,7 +16,7 @@
             <fieldset>
                 <input type="text" id="editUserIdHidden" th:field="${userRoleForm.userId}" hidden="hidden"/>
                 <div role="tabpanel" class="tab-pane" id="recapusers">
-                    <div id="users-searchview">
+                    <div id="users-searchview" style="display: none">
                         <div class="row margin-btm-10">
                             <div class="col-sm-7 margin-top-05">Provide one or more data to search. Empty search would
                                 return all data.
@@ -208,7 +208,7 @@
                     </div>
 
                     <!--User Create Request Add Section-->
-                    <div class="user-view" id="users-createview">
+                    <div class="user-view" id="users-createview" style="display: none">
                         <div class="row margin-top-0">
                             <div class="col-sm-6 margin-top-0"><h3 class="margin-0">Create User</h3></div>
                             <div class="col-sm-6 text-right usersbacklink">
@@ -347,7 +347,7 @@
 
                     <!-- edit tab starts-->
 
-                    <div class="user-view" id="editusers-createview">
+                    <div class="user-view" id="editusers-createview" style="display:none;">
                         <div class="row margin-top-0">
                             <div class="col-sm-6 margin-top-0"><h3 class="margin-0">Edit User</h3></div>
                             <div class="col-sm-6 text-right usersbacklink">
@@ -478,7 +478,7 @@
                         </div>
                     </div>
                     <!--Delete User Section-->
-                    <div class="user-view" id="deleteUsers-view">
+                    <div class="user-view" id="deleteUsers-view" style="display: none">
                         <div class="row margin-top-0">
                             <div class="col-sm-6 margin-top-0"><h3 class="margin-0">Delete User</h3></div>
                             <div class="col-sm-6 text-right usersbacklink">
