--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -17,7 +17,7 @@
                     <div id="searchRequestsSection" class="request-main-section" style="display:none;">
                         <div class="search-bar">
                             <div class="row margin-btm-10">
-                                <div class="col-sm-12 text-right backtext"><a href="#"><span class="glyphicon glyphicon-menu-left"></span> Go Back</a></div>
+                                <div class="col-sm-12 text-right backtext"><a href="#" id="goBackLink"><span class="glyphicon glyphicon-menu-left"></span> Go Back</a></div>
                             </div>
                             <div class="row margin-0">
                                 <div class="col-xs-12  padding-0">
@@ -220,7 +220,7 @@
                                                            th:onkeyup="'javascript:toggleItemBarcodeValidation()'"
                                                            onblur="populateItemDetails()">
                                                     </input>
-                                                    <span id="itemBarcodeErrorMessage" style="color: red;">Item barcode is required.</span>
+                                                    <span id="itemBarcodeErrorMessage" style="color: red;display: none">Item barcode is required.</span>
                                                     <span id="itemBarcodeNotFoundErrorMessage" style="color: red;"></span>
                                                 </div>
                                             </div>
@@ -270,7 +270,7 @@
                                                                    th:field="*{patronBarcodeInRequest}"
                                                                    th:onkeyup="'javascript:togglePatronBarcodeValidation()'">
                                                             </input>
-                                                            <span id="patronBarcodeErrorMessage" style="color: red;">Patron barcode is required.</span>
+                                                            <span id="patronBarcodeErrorMessage" style="color: red;display: none">Patron barcode is required.</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -285,7 +285,7 @@
                                                                    th:field="*{patronEmailAddress}"
                                                                    onblur="validateEmailAddress()">
                                                             </input>
-                                                            <span id="patronEmailIdErrorMessage" style="color: red;">Email address is invalid.</span>
+                                                            <span id="patronEmailIdErrorMessage" style="color: red;display: none">Email address is invalid.</span>
                                                         </div>
                                                     </div>
                                                 </div>
