Added Tooltip for roles in dropdown

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -505,7 +505,7 @@
                                                 class="btn btn-primary pull-right" style="margin-right: 10px;"
                                                 disabled="disabled">Export Selected Records
                                         </button>
-                                        <button th:if="${session.isRequestAllowed || session.isRequestItemAllowed}" id="" type="button" name="" value="" class="btn btn-primary pull-right"
+                                        <button th:if="${session.isRequestAllowed || session.isRequestItemAllowed || session.isRequestAllAllowed}" id="" type="button" name="" value="" class="btn btn-primary pull-right"
                                                 style="margin-right: 10px;" disabled="disabled">Request Selected
                                             Items(s)
                                         </button>
