RECAP-411 : Added login option for HTC Users

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,6 +69,7 @@
                                             <option value="1">PUL</option>
                                             <option value="2">CUL</option>
                                             <option value="3">NYPL</option>
+                                            <option value="4">HTC</option>
                                         </select>
                                     </div>
                                     <p id="institutionError" th:if="${#fields.hasErrors('institution')}"
